Add UI testing (espresso) (Main and second)

--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -11,6 +11,7 @@
     tools:context="io.github.shredktp.a48letshellokotlin.ThirdActivity">
 
     <TextView
+        android:id="@+id/tv_title_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
