--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -11,7 +11,7 @@
     tools:context="io.github.shredktp.a48letshellokotlin.SecondActivity">
 
     <TextView
-        android:id="@+id/tv_title_detail"
+        android:id="@+id/tv_title_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
